extract private ip

--- a/telecomms/ansible/instantiate.yaml
+++ b/telecomms/ansible/instantiate.yaml
@@ -15,4 +15,7 @@
         memory: 1024 MB
         attributes:
           name: webserver-vm
-    
+        state: present
+      register: webres
+    - debug:
+      msg: "Webserver IP: {{ res.instances[0].networks[0].ip }}"
