cleaned up database.yaml

--- a/telecomms/ansible/database.yaml
+++ b/telecomms/ansible/database.yaml
@@ -14,15 +14,10 @@
         state: directory
         mode: 0755
 
-    - name: Install aptitude
-      apt:
-        name: aptitude
-        state: latest
-        update_cache: true
-
     - name: Install required system packages
       apt:
         pkg:
+          - aptitude
           - apt-transport-https
           - ca-certificates
           - curl
