--- a/telecomms/ansible/client.yaml
+++ b/telecomms/ansible/client.yaml
@@ -3,7 +3,7 @@
   hosts: client
   become: true
   vars_files:
-      - credentials.yaml
+      - ../misc/credentials.yaml
   vars:
     ansible_user: "{{ client_vm_uname }}"
   
