--- a/telecomms/ansible/webserver.yaml
+++ b/telecomms/ansible/webserver.yaml
@@ -4,7 +4,7 @@
     become: yes
     hosts: webserver
     vars_files:
-      - db_credentials.yaml
+      - ../misc/credentials.yaml
     vars:
       container_name: provider_app
       img_name: telecomm_provider
