--- a/telecomms/ansible/database.yaml
+++ b/telecomms/ansible/database.yaml
@@ -1,21 +1,21 @@
 ---
   - name: Configure db VM
     hosts: db
-    become: true
     vars_files:
-      - ../misc/credentials.yaml
+      - ../misc/db_auth.yaml
+    become: true
     vars:
       default_container_name: postgres-server
       default_container_image: postgres
-      ansible_user: "{{ db_vm_username }}"
-  
+      ansible_user: "{{ db_user }}"
+
     tasks:
       - name: packages | ensure apt list dir exists
         file:
           path: /var/lib/apt/lists/
           state: directory
           mode: 0755
-  
+
       - name: Install required system packages
         apt:
           pkg:
@@ -30,12 +30,12 @@
             - postgresql-client
           state: latest
           update_cache: true
-  
+
       - name: Add Docker GPG apt Key
         apt_key:
           url: https://download.docker.com/linux/ubuntu/gpg
           state: present
-  
+
       - name: Add Docker Repository
         apt_repository:
           repo: deb https://download.docker.com/linux/ubuntu focal stable
@@ -46,18 +46,18 @@
           name: docker-ce
           state: latest
           update_cache: true
-  
+
       - name: Install Docker Module for Python
         pip:
-          name: 
+          name:
             - docker
             - psycopg2-binary
-  
+
       - name: Pull Postgres Docker image
         community.docker.docker_image:
           name: "{{ default_container_image }}"
           source: pull
-  
+
       - name: Create postgres container
         community.docker.docker_container:
           name: "{{ default_container_name }}"
@@ -69,22 +69,22 @@
             POSTGRES_DB: "{{ POSTGRES_DB }}"
           ports:
             - "5432:5432"
-  
+
       - name: Ensure postgres container is started
         community.docker.docker_container:
           name: "{{ default_container_name }}"
           state: started
-  
+
       - name: Pause for 10 seconds to ensure the container is fully up
         pause:
           seconds: 10
-  
+
       - name: Copy database setup script to remote host
         ansible.builtin.copy:
           src:  ~/virtualization-project/telecomms/misc/dbsetup.sql
           dest: /tmp/
           mode: '0755'
-  
+
       - name: setup database tables
         community.postgresql.postgresql_script:
           path: /tmp/dbsetup.sql
@@ -92,4 +92,3 @@
           login: "{{ POSTGRES_USER }}"
           login_password: "{{ POSTGRES_PASSWORD }}"
           host: "127.0.0.1"
-          
