--- a/telecomms/ansible/instantiate.yaml
+++ b/telecomms/ansible/instantiate.yaml
@@ -3,22 +3,26 @@
   gather_facts: no
   become: true
   hosts: localhost
+  vars_files:
+    - ../misc/ws_auth.yaml
+    - ../misc/db_auth.yaml
+    - ../misc/client_auth.yaml
   tasks:
     - name: Install pyone
       ansible.builtin.pip:
-        name: pyone==6.10.0 # crashes without version 
+        name: pyone==6.10.0 # crashes without version
         state: present
 
     - name: Instantiate webserver templated VM
       community.general.one_vm:
         api_url: https://grid5.mif.vu.lt/cloud3/RPC2
+        api_username: "{{ ws_user }}"
+        api_password: "{{ ws_password }}"
         template_id: 2730
         disk_size: 8 GB
         attributes:
           name: webserver-vm
         state: present
-      environment:
-        ONE_AUTH: /root/auth/webserver_auth
       register: webres
 
     - debug:
@@ -27,13 +31,13 @@
     - name: Instantiate database templated VM
       community.general.one_vm:
         api_url: https://grid5.mif.vu.lt/cloud3/RPC2
+        api_username: "{{ db_user }}"
+        api_password: "{{ db_password }}"
         template_id: 1737
         disk_size: 10 GB
         attributes:
           name: db-vm
         state: present
-      environment:
-        ONE_AUTH: /root/auth/db_auth
       register: dbres
 
     - debug:
@@ -42,14 +46,14 @@
     - name: Instantiate client templated VM
       community.general.one_vm:
         api_url: https://grid5.mif.vu.lt/cloud3/RPC2
+        api_username: "{{ client_user }}"
+        api_password: "{{ client_password }}"
         template_id: 2646
         disk_size: 8 GB
         memory: 1024 MB
         attributes:
           name: client-vm
         state: present
-      environment:
-        ONE_AUTH: /root/auth/client_auth
       register: clientres
 
     - debug:
